--- a/package.json
+++ b/package.json
@@ -8,14 +8,25 @@
     "start": "go run graphql.go & babel-node ./server.js",
     "update-schema": "cd ./scripts && go run updateSchema.go"
   },
+  "metadata": {
+    "graphql": {
+      "schema": "./data/schema.json"
+    }
+  },
   "dependencies": {
-    "babel": "5.8.21",
-    "babel-loader": "5.3.2",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.5.1",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.3",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-relay-plugin": "0.2.3",
+    "babel-relay-plugin-loader": "^0.7.1",
     "classnames": "^2.1.3",
     "express": "^4.13.1",
-    "react": "^0.14.0-rc",
-    "react-dom": "^0.14.0-rc",
+    "react": "^0.14.x",
+    "react-dom": "^0.14.x",
     "react-relay": "^0.3.1",
     "webpack": "^1.10.5",
     "webpack-dev-server": "^1.10.1"
