--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "golang-relay-starter-kit",
-  "private": true,
   "description": "A quick way to get up and running with Relay on Golang",
-  "repository": "github.com/sogko/golang-relay-starter-kit",
+  "repository": "https://github.com/mattludwigs/golang-relay-starter-kit",
   "version": "0.1.0",
   "scripts": {
     "start": "go run graphql.go & babel-node ./server.js",
